Different page titles

--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,1 +1,12 @@
-<h1>About</h1>
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>About | Sample App</title>
+  </head>
+  <body>
+    <h1>About</h1>
+    <p>
+      This is the sample application for the tutorial.
+    </p>
+  </body>
+</html>
