--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,7 +1,7 @@
-<!DOCTYPE html>
+<% provide(:title, "About") %><!DOCTYPE html>
 <html>
   <head>
-    <title>About | Sample App</title>
+    <title><%= yield(:title) %> | Sample App</title>
   </head>
   <body>
     <h1>About</h1>
