--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,7 +1,8 @@
+<% provide(:title, "Home") %>
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Home | Sample App</title>
+    <title><%= yield(:title) %> | Sample App</title>
   </head>
   <body>
     <h1>Sample App</h1>
