--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,12 +1,5 @@
-<% provide(:title, "About") %><!DOCTYPE html>
-<html>
-  <head>
-    <title><%= yield(:title) %> | Sample App</title>
-  </head>
-  <body>
-    <h1>About</h1>
-    <p>
-      This is the sample application for the tutorial.
-    </p>
-  </body>
-</html>
+<% provide(:title, "About") %>
+<h1>About</h1>
+<p>
+  This is the sample application for the tutorial.
+</p>
