--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -2,5 +2,8 @@
   <li>
     <%= gravatar_for user, size: 50 %>
     <%= link_to user.name, user %>
+    <% if current_user.admin? %>
+      <%= link_to "delete", user, method: :delete %>
+    <% end %>
   </li>
 <% end %>
