--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -7,5 +7,8 @@
         <%= @user.name %>
       </h1>
     </section>
+    <ol class="microposts">
+      <%= render @microposts %>
+    </ol>
   </aside>
 </div>
