--- a/app/views/shared/_home_signed_in.html.erb
+++ b/app/views/shared/_home_signed_in.html.erb
@@ -9,6 +9,7 @@
   </aside>
     <div class="col-md-8">
       <section class="user_feed">
+        <h3>Micropost Feed</h3>
         <%= render 'shared/feed' %>
       </section>
     </div>
