--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -11,7 +11,9 @@
   <div class="col-md-8">
     <section class="user_feed">
       <% if @user.microposts.any? %>
-        <h3>Microposts (<%= @user.microposts.count %>)</h3>
+        <h3 id="microposts_count">
+          Microposts (<%= @user.microposts.count %>)
+        </h3>
         <ol class="microposts">
           <%= render @microposts %>
         </ol>
