--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -12,6 +12,9 @@
     </section>
   </aside>
   <div class="col-md-8">
+    <section>
+      <%= render 'users/follow_form' if logged_in? %>
+    </section>
     <section class="user_feed">
       <% if @user.microposts.any? %>
         <h3 id="microposts_count">
