--- a/app/views/users/show_follow.html.erb
+++ b/app/views/users/show_follow.html.erb
@@ -1,10 +1,32 @@
 <% provide(:title, @title) %>
-<h1><%= @title %></h1>
-
-<%= will_paginate @users %>
-
-<ul class="users">
-  <%= render @users %>
-</ul>
-
-<%= will_paginate @users %>
+<div class="row">
+  <aside class="col-md-4">
+    <section class="user_info">
+      <%= gravatar_for @user %>
+      <h3><%= @user.name %></h3>
+      <span><%= link_to "view my profile", @user %></span>
+      <span id="microposts_count">
+        Microposts: <%= @user.microposts.count %>
+      </span>
+    </section>
+    <section class="stats">
+      <%= render 'shared/stats' %>
+      <% if @users.any? %>
+        <div class="user_avatars">
+          <% @users.each do |user| %>
+            <%= link_to gravatar_for(user, size: 30), user %>
+          <% end %>
+        </div>
+      <% end %>
+    </section>
+  </aside>
+  <div class="col-md-8">
+    <h1><%= @title %></h1>
+    <% if @users.any? %>
+      <ul class="users follow">
+        <%= render @users %>
+      </ul>
+      <%= will_paginate %>
+    <% end %>
+  </div>
+</div>
